# MedMink

./: .env.example  .gitignore  HACKATHON_WRITEUP.md  Makefile  PROBLEM_SOLUTION_ANALYSIS.md  README.md  alembic.ini  docker-compose.yml  modal_app.py  modal_app_multimodal.py  modal_asr.py  modal_backend.py  modal_cxr.py  modal_derm.py  modal_hear.py  modal_path.py  modal_txgemma.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
dashboard/: Dockerfile  components.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
demo/: RECORDING_CHECKLIST.md  VIDEO_SCRIPT.md  build_seed_bundle.py  eclampsia_case.txt  harvest_responses.mjs  record_all.mjs  record_demos.mjs  seed_all.py  stemi_case.txt
demo/features/: 01-dashboard.mjs  02-case-analysis.mjs  02a-case-assessment.mjs  02b-case-treatment.mjs  02c-case-safety.mjs  02d-case-orders.mjs  02e-case-tools.mjs  02f-case-agent.mjs  02h-cxr-foundation.mjs  02i-derm-foundation.mjs  02j-path-foundation.mjs  02k-drug-properties.mjs  02l-drug-interaction.mjs  02m-reassessment.mjs  02n-followup-chat.mjs  07-labs.mjs  (+23 more)
docker/: Dockerfile.api  init-db.sql  init-vector.sql
docs/: COMPETITION_SUBMISSION.md  COMPETITION_WRITEUP.md  DEMO_SCRIPT.md  FEATURE_REVIEW.md  KAGGLE_DESCRIPTION.txt
notebooks/: multilingual_interview_test.ipynb  run_multilingual_test.py
scripts/: demo.sh  download_datasets.py  download_model.sh  generate-translations.ts  seed_embeddings.py  setup_medgemma.sh
src/: __init__.py  config.py  db.py  db_models.py  models.py
tests/: __init__.py  conftest.py
(+459 files in other folders)
